# Ruzino-Homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.py  run_all_tests.py  test_results.txt
source/Core/rzsim/: CMakeLists.txt
source/Core/rzsim/geometry_nodes/: bss_deducer.cpp  mass_spring_implicit.cpp  mass_spring_implicit_gpu.cpp  neo_hookean_gpu.cpp  reduced_order_neo_hookean_gpu.cpp
source/Core/rzsim/include/rzsim/: reduced_order_basis.h  rzsim.h
source/Core/rzsim/rzsim_cuda/: CMakeLists.txt
source/Core/rzsim/rzsim_cuda/src/: adjacency_map.cu  build_matrix.cu  mass_spring_implicit.cu  neo_hookean.cu  reduced_order_neo_hookean.cu
source/Core/rzsim/src/: reduced_order_basis.cpp  rzsim.cpp
source/Core/rzsim/tests/: adjacency_map.cpp  batch_render.py  conftest.py  laplace_matrix.cpp  reduced_basis.cpp  to_video.py
source/Editor/: CMakeLists.txt
source/Editor/GUI/include/GUI/: image_widget.hpp  widget.h  window.h
source/Editor/GUI/python/: GUI.cpp
source/Editor/GUI/source/: image_widget.cpp  imgui_nvrhi.cpp  widget.cpp  window.cpp
source/Editor/GUI/tests/: GUI.cpp
source/Editor/blueprints/: CMakeLists.txt
source/Editor/blueprints/include/blueprints/: api.h  builders.h  drawing.h  imgui_bezier_math.h  imgui_extra_math.h
source/Editor/blueprints/src/blueprint-utilities/: builders.cpp  drawing.cpp  widgets.cpp
source/Editor/blueprints/src/imgui-node-editor/: crude_json.cpp  imgui_canvas.cpp  imgui_node_editor.cpp  imgui_node_editor_api.cpp
source/Editor/geometry/: CMakeLists.txt  util_openmesh_bind.cpp
source/Editor/geometry/algorithms/: intersection.cpp
source/Editor/geometry/algorithms/CS/: gfray.slang  intersection.slang  pointsamples.slang
source/Editor/geometry/tests/: expression.cpp  expression_performance.cpp  geom_algorithms.cpp
source/Editor/geometry_nodes/: CMakeLists.txt  GPU_sph.cpp  hw5_boundary_map.cpp  hw5_param.cpp  hw6_arap.cpp  hw9_node_mass_spring.cpp  instance_on_points.cpp  node_arap.cpp  node_colormap.cpp  node_create_geom.cpp  node_fill_hole.cpp  node_reserve_verts.cpp  node_set_value.cpp  node_tetgen.cpp  node_transform_geom.cpp  node_triangulate.cpp  node_write_usd.cpp  random_points.cpp  simulation_zone.cpp
source/Editor/geometry_nodes/fem_bem/: Expression.hpp  derivative.hpp  parameter_map.hpp
source/Editor/geometry_nodes/mass_spring/: MassSpring.cpp  MassSpring.h
source/Editor/geometry_nodes/mesh2SDF/: mesh2sdf.cpp
source/Editor/material/: CMakeLists.txt
source/Editor/material/include/MCore/: Graph.h  MaterialXNodeTree.hpp  MaterialXNodeTreeWidget.h
source/Editor/material/source/: Graph.cpp  MaterialXNodeTree.cpp  MaterialXNodeTreeWidget.cpp
source/Editor/material/tests/: mtlx_editor.cpp
source/Editor/rzconsole/: CMakeLists.txt  README.md
source/Editor/rzconsole/include/rzconsole/: ConsoleInterpreter.h  ConsoleObjects.h  api.h  imgui_console.h  spdlog_console_sink.h  string_utils.h
source/Editor/rzconsole/source/: ConsoleInterpreter.cpp  ConsoleObjects.cpp  imgui_console.cpp  spdlog_console_sink.cpp
source/Editor/rzconsole/tests/: console_gui.cpp
source/Editor/rzpython/: CMakeLists.txt
source/Editor/rzpython/include/rzpython/: interpreter.hpp  rzpython.hpp  rzpython_impl.hpp
source/Editor/rzpython/source/: interpreter.cpp  rzpython.cpp
source/Editor/rzpython/tests/: rzpython_autocomplete.cpp  rzpython_runtime.cpp
source/Runtime/renderer/: CMakeLists.txt
source/Runtime/renderer/nodes/: accumulate.cpp  automatic_tonemapper.cpp  gamma_correction.cpp  material_brdf_analyzer.cpp  node_node_render_ray_generation.cpp  node_render_blit_to_present.cpp  node_render_create_empty_texture.cpp  node_render_material_eval_sample_pdf.cpp  node_render_rasterize.cpp  node_render_ray_launch.cpp  node_render_rng_buffer.cpp  node_render_scatter_contribution.cpp  path_tracing.cpp  ray_marching.cpp  render_node_base.h  tome_mapping.cpp  translation_orientation_to_transforms.cpp
source/Runtime/renderer/nodes/render_node_base/: render_node_base.h
source/Runtime/renderer/python/: render_graph.py
source/Runtime/renderer/source/: gpu_compute.cpp  instancer.cpp  instancer.h  light.cpp  light.h  renderDelegate.cpp  renderParam.h  renderTLAS.cpp  renderTLAS.h  renderer.cpp
source/Runtime/renderer/source/geometries/: field.cpp  field.h  mesh.cpp  mesh.h  points.cpp  volume.cpp  volume.h
source/Runtime/renderer/source/material/: bindlessContext.cpp  bindlessContext.h  hdMtlxFast.cpp  material.cpp  material.h  materialFilter.cpp  materialFilter.h  materialX.cpp  (+1 more)
source/Runtime/renderer/tests/: check_domelight.py  check_generated_usd.py  check_image.py  check_material_creation.py  check_materials.py  check_usd_ref.py  compare_usd_materials.py  conftest.py  create_working_material.py  debug_materialx.py  fix_chess_set_binding.py  inspect_stage.py  materials_batch_test.py  mtlx.cpp  parse_mtlx.py  read_shader_ball.py  slang_tester.hpp  test_brdf_aluminum.py  test_brdf_batch.py  test_brdf_comprehensive.py  test_brdf_single_row.py  test_hydra_renderer.py  test_material_brdf_visualizer.py  test_materials.py  test_materials_batch.py  test_materials_simple.py  test_pdf_debug.py
submissions/lisi_homework/utils/: CMakeLists.txt  simple_util.cpp
(+225 files in other folders)
